--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -181,6 +181,11 @@ strong{
     margin-top: 35px;
     border: 2px solid white;
 }
+#combate{
+    background-color: orange;
+    border-radius:  0 25% 0 25%;
+    font-size: 30px;
+}
 @media (max-width : 1000px) {
     .mascotas {
         flex-direction: column;
