--- a/public/Styles/styles.css
+++ b/public/Styles/styles.css
@@ -75,6 +75,7 @@ button{
     border: none;
     border-radius: 25%;
     margin: 10px;
+    user-select: none;
 }
 button:hover {
     background-color: var(--verdeoscuro);
